fixed for visibility footer

--- a/src/styleweather.css
+++ b/src/styleweather.css
@@ -37,7 +37,7 @@ input {
   width: 350px;
 }
 .row #first-day {
-  margin: 120px;
+  margin: 0;
 }
 .column {
   display: block;
@@ -69,8 +69,7 @@ input {
 .col-2 {
   border: 1px solid #5aaaff;
   padding: 0;
-  margin-top: 120px;
-  margin-right: 2px;
+  margin: 120px auto 0;
   text-align: center;
   width: 52px;
   color: #5aaaff;
